--- a/Projeto2024/repositorium/templates/listRecords.html
+++ b/Projeto2024/repositorium/templates/listRecords.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>GraphDB Data</title>
-    <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}"/>
+    <link rel="icon" href="{{ url_for('static', filename='UM.jpg') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/navBar.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/filters.css') }}" />
 </head>
@@ -17,7 +17,7 @@
 
     <div class="content">
         <h1>List Record</h1>
-        <h2>Results | {{ listRecords|length }}</h2>
+        <h2>Results | {{ listRecords|length }} of {{count.value}}</h2>
 
         <div class="filters">
             {% include 'filters.html' %}
