--- a/Projeto2024/repositorium/templates/record.html
+++ b/Projeto2024/repositorium/templates/record.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>GraphDB Data</title>
-    <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}"/>
+    <link rel="icon" href="{{ url_for('static', filename='UM.jpg') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/navBar.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/filters.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='javascript/creater.js') }}"/>
