hotfixes nos htmls

--- a/Projeto2024/repositorium/templates/actions_records.html
+++ b/Projeto2024/repositorium/templates/actions_records.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GraphDB Data</title>
+    <title>Repositorium v2</title>
     <link rel="icon" href="{{ url_for('static', filename='UM.jpg') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/navBar.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/filters.css') }}" />
@@ -50,12 +50,17 @@
                         <a href="updateRecord/{{ record_id }}" >✏️</a>
 
                         <button type="button" class="deleteButton" data-id="{{ record_id }}">🗑️</button>
-                        <!--<button type="button" class="editButton" data-id="{{ record_id }}">✏️</button>-->
                     </td>
                     <td><a href="record/{{ record_id }}"> {{ record.id.value }} </a></td>
                     <td><a href="record/{{ record_id }}"> {{ record.title.value }} </a></td>
                     <td>
                         {% for contributor, id in record.names %}
+                            {% if contributor.value != "" %}
+                                {{ contributor.value }} 
+                            {%else%}
+                                {{ id.value }}
+                            {% endif %}
+                            {% if not loop.last %} | {%endif%}                            
                         {% endfor %}
                     </td>
                     <td>{{ record.timestamp.value }}</td>
