--- a/Projeto2024/repositorium/templates/listRecords.html
+++ b/Projeto2024/repositorium/templates/listRecords.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>GraphDB Data</title>
+    <title>Repositorium v2</title>
     <link rel="icon" href="{{ url_for('static', filename='UM.jpg') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/navBar.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/filters.css') }}" />
@@ -44,10 +44,11 @@
                     <td>
                         {% for contributor, id in record.names %}
                             {% if contributor.value != "" %}
-                                <a href="{{ id }}"> {{ contributor.value }} </a> | 
+                                {{ contributor.value }} 
                             {%else%}
-                                <a href="{{ id }}"> {{ id.value }} </a> | 
+                                {{ id.value }}
                             {% endif %}
+                            {% if not loop.last %} | {%endif%}                            
                         {% endfor %}
                     </td>
                     <td>{{ record.timestamp.value }}</td>
