--- a/Projeto2024/repositorium/templates/updateRecord.html
+++ b/Projeto2024/repositorium/templates/updateRecord.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GraphDB Data</title>
+    <title>Repositorium v2</title>
     <link rel="icon" href="{{ url_for('static', filename='UM.jpg') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/navBar.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/creater.css') }}" />
@@ -55,7 +55,6 @@
 
 
                 <h3 style="margin-bottom: 0%;">Authors</h3>
-                <button type="button" id="add-author">+</button>
                 <div id="author-container">
                 </div>
                 <button type="button" id="add-author"> + </button>
